--- a/src/pretix/presale/static/pretixpresale/less/event.less
+++ b/src/pretix/presale/static/pretixpresale/less/event.less
@@ -66,3 +66,11 @@
 .checkout-button-row {
     padding: 15px 0;
 }
+@media (max-width: @screen-sm-max) {
+    .checkout-button-row div {
+        margin-bottom: 10px;
+    }
+    .page-header h1 small {
+        display: block;
+    }
+}
