--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="{% static "pretixpresale/js/ui/main.js" %}"></script>
     {% endcompress %}
     {{ html_head|safe }}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="container event">
