--- a/src/pretix/control/templates/pretixcontrol/auth/base.html
+++ b/src/pretix/control/templates/pretixcontrol/auth/base.html
@@ -8,6 +8,7 @@
 		{% compress css %}
 		<link rel="stylesheet" type="text/less" href="{% static "pretixcontrol/less/auth.less" %}" />
 		{% endcompress %}
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<div class="container">
