--- a/src/pretix/control/templates/pretixcontrol/event/permissions.html
+++ b/src/pretix/control/templates/pretixcontrol/event/permissions.html
@@ -7,46 +7,48 @@
 		<fieldset>
 			<legend>{% trans "Permissions" %}</legend>
             {{ formset.management_form }}
-            <table class="table table-striped table-condensed">
-                <thead>
-                    <tr>
-                        <th>{% trans "User" %}</th>
-                        <th>{% trans "Change settings" %}</th>
-                        <th>{% trans "Change products" %}</th>
-                        <th>{% trans "View orders" %}</th>
-                        <th>{% trans "Change orders" %}</th>
-                        <th>{% trans "Change permissions" %}</th>
-                        <th>{% trans "Delete" %}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for form in formset %}
+            <div class="table-responsive">
+                <table class="table table-striped table-condensed">
+                    <thead>
                         <tr>
-                            <td>{{ form.id }}{{ form.instance.user }}</td>
-                            <td>{{ form.can_change_settings }}</td>
-                            <td>{{ form.can_change_items }}</td>
-                            <td>{{ form.can_view_orders }}</td>
-                            <td>{{ form.can_change_orders }}</td>
-                            <td>{{ form.can_change_permissions }}</td>
-                            <td>{{ form.DELETE }}</td>
+                            <th>{% trans "User" %}</th>
+                            <th>{% trans "Change settings" %}</th>
+                            <th>{% trans "Change products" %}</th>
+                            <th>{% trans "View orders" %}</th>
+                            <th>{% trans "Change orders" %}</th>
+                            <th>{% trans "Change permissions" %}</th>
+                            <th>{% trans "Delete" %}</th>
                         </tr>
-                    {% endfor %}
-                    <tr>
-                        <td>
-                            <div class="row-fluid">
-                                <div class="col-sm-12">
-                                    {% bootstrap_field add_form.user layout='inline' %}
+                    </thead>
+                    <tbody>
+                        {% for form in formset %}
+                            <tr>
+                                <td>{{ form.id }}{{ form.instance.user }}</td>
+                                <td>{{ form.can_change_settings }}</td>
+                                <td>{{ form.can_change_items }}</td>
+                                <td>{{ form.can_view_orders }}</td>
+                                <td>{{ form.can_change_orders }}</td>
+                                <td>{{ form.can_change_permissions }}</td>
+                                <td>{{ form.DELETE }}</td>
+                            </tr>
+                        {% endfor %}
+                        <tr>
+                            <td>
+                                <div class="row-fluid">
+                                    <div class="col-sm-12">
+                                        {% bootstrap_field add_form.user layout='inline' %}
+                                    </div>
                                 </div>
-                            </div>
-                        </td>
-                        <td>{{ add_form.can_change_settings }}</td>
-                        <td>{{ add_form.can_change_items }}</td>
-                        <td>{{ add_form.can_view_orders }}</td>
-                        <td>{{ add_form.can_change_orders }}</td>
-                        <td>{{ add_form.can_change_permissions }}</td>
-                    </tr>
-                </tbody>
-            </table>
+                            </td>
+                            <td>{{ add_form.can_change_settings }}</td>
+                            <td>{{ add_form.can_change_items }}</td>
+                            <td>{{ add_form.can_view_orders }}</td>
+                            <td>{{ add_form.can_change_orders }}</td>
+                            <td>{{ add_form.can_change_permissions }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 		</fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
