--- a/src/pretix/control/templates/pretixcontrol/item/variations_1d.html
+++ b/src/pretix/control/templates/pretixcontrol/item/variations_1d.html
@@ -4,25 +4,27 @@
 {% block inside %}
 	<form action="" method="post">
 		{% csrf_token %}
-		<table class="table">
-			<thead>
-				<tr>
-					<th>{{ properties.0 }}</th>
-					<th>{% trans "Active" %}</th>
-					<th>{% trans "Price" %}</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for form in forms %}
-					{% bootstrap_form_errors form type='all' layout='inline' %}
-					<tr>
-						<td>{{ form.values.0 }}</td>
-						<td>{% bootstrap_field form.active layout='inline' %}</td>
-						<td>{% bootstrap_field form.default_price layout='inline' %} {{ form.default_price.errors }}</td>
-					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>{{ properties.0 }}</th>
+                        <th>{% trans "Active" %}</th>
+                        <th>{% trans "Price" %}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for form in forms %}
+                        {% bootstrap_form_errors form type='all' layout='inline' %}
+                        <tr>
+                            <td>{{ form.values.0 }}</td>
+                            <td>{% bootstrap_field form.active layout='inline' %}</td>
+                            <td>{% bootstrap_field form.default_price layout='inline' %} {{ form.default_price.errors }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
 		<div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
                 {% trans "Save" %}
