--- a/src/pretix/presale/templates/pretixpresale/event/orders.html
+++ b/src/pretix/presale/templates/pretixpresale/event/orders.html
@@ -4,34 +4,37 @@
 
 {% block content %}
     <h2>{% trans "Your orders" %}</h2>
-    <table class="table">
-        <thead>
-            <th>{% trans "Order code" %}</th>
-            <th>{% trans "Date" %}</th>
-            <th>{% trans "Total" %}</th>
-            <th>{% trans "Status" %}</th>
-            <th></th>
-        </thead>
-        <tbody>
-            {% for order in orders %}
-                <tr>
-                    <td>{{ order.code }}</td>
-                    <td>{{ order.datetime|date:"SHORT_DATE_FORMAT" }}</td>
-                    <td>{{ event.currency }} {{ order.total|floatformat:2 }}</td>
-                    <td>{% include "pretixpresale/event/fragment_order_status.html" with order=order %}</td>
-                    <td><a href="{% url "presale:event.order" event=request.event.slug organizer=request.event.organizer.slug order=order.code %}">
-                        {% trans "View details" %}
-                    </a></td>
-                </tr>
-            {% empty %}
-                <tr>
-                    <td colspan="5">
-                        <em>{% trans "You did not yet place any orders." %}</em>
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+                <th>{% trans "Order code" %}</th>
+                <th>{% trans "Date" %}</th>
+                <th>{% trans "Total" %}</th>
+                <th>{% trans "Status" %}</th>
+                <th></th>
+            </thead>
+            <tbody>
+                {% for order in orders %}
+                    <tr>
+                        <td><a href="{% url "presale:event.order" event=request.event.slug organizer=request.event.organizer.slug order=order.code %}">
+                            <strong>{{ order.code }}</strong></td>
+                        <td>{{ order.datetime|date:"SHORT_DATE_FORMAT" }}</td>
+                        <td>{{ event.currency }} {{ order.total|floatformat:2 }}</td>
+                        <td>{% include "pretixpresale/event/fragment_order_status.html" with order=order %}</td>
+                        <td><a href="{% url "presale:event.order" event=request.event.slug organizer=request.event.organizer.slug order=order.code %}">
+                            {% trans "View details" %}
+                        </a></td>
+                    </tr>
+                {% empty %}
+                    <tr>
+                        <td colspan="5">
+                            <em>{% trans "You did not yet place any orders." %}</em>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
     <a href="{% url "presale:event.index" event=request.event.slug organizer=request.event.organizer.slug %}"
         class="btn btn-primary btn-lg">
         <span class="fa fa-plus"></span>
