--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_confirm.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_confirm.html
@@ -24,9 +24,9 @@
                         <th>{% if row.ok %}
                             <input type="checkbox" name="mark_paid" value="{{ row.order.code }}"
                                 checked="checked" />
-                            <input type="hidden" name="date_{{ row.date }}" value="{{ row.date }}" />
-                            <input type="hidden" name="payer_{{ row.payer }}" value="{{ row.payer }}" />
-                            <input type="hidden" name="reference_{{ row.reference }}" value="{{ row.reference }}" />
+                            <input type="hidden" name="date_{{ row.order.code }}" value="{{ row.date }}" />
+                            <input type="hidden" name="payer_{{ row.order.code }}" value="{{ row.payer }}" />
+                            <input type="hidden" name="reference_{{ row.order.code }}" value="{{ row.reference }}" />
                         {% endif %}</th>
                         <td>{{ row.date }}</td>
                         <td>{{ row.reference }}</td>
