Changed the opacity of dashboard icons to keep numbers readable on small screens

--- a/src/pretix/control/static/pretixcontrol/less/main.less
+++ b/src/pretix/control/static/pretixcontrol/less/main.less
@@ -72,6 +72,9 @@ nav.navbar {
     -ms-transform: rotateX(180deg); /* IE 9 */
     -webkit-transform: rotateX(180deg); /* Safari and Chrome */
 }
+.dashboard-panels .panel-heading .fa {
+    opacity: 0.5;
+}
 @media (max-width: @screen-sm-max) {
     .navbar-nav {
         margin-left: 0;
