Refs #79 -- Toggle between number and money in order overview

--- a/src/pretix/control/static/pretixcontrol/less/orders.less
+++ b/src/pretix/control/static/pretixcontrol/less/orders.less
@@ -12,4 +12,10 @@
     th:not(:first-child) {
         text-align: right;
     }
+    span.sum {
+        display: none;
+    }
+}
+#sumtoggle {
+    margin-top: 20px;
 }
