--- a/src/pretix/control/templates/pretixcontrol/orders/overview.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/overview.html
@@ -1,7 +1,14 @@
 {% extends "pretixcontrol/event/base.html" %}
 {% load i18n %}
+{% load order_overview %}
 {% block title %}{% trans "Order overview" %}{% endblock %}
 {% block content %}
+    <div class="pull-right">
+        <div class="btn-group" role="group" id="sumtoggle">
+            <button type="button" data-target=".count" class="btn btn-default active">Show number</button>
+            <button type="button" data-target=".sum" class="btn btn-default">Show {{ request.event.currency }}</button>
+        </div>
+    </div>
 	<h1>{% trans "Order overview" %}</h1>
     <div class="table-responsive">
         <table class="table table-condensed table-hover table-product-overview">
@@ -20,31 +27,31 @@
                     {% if tup.0 %}
                         <tr class="category">
                             <th>{{ tup.0.name }}</th>
-                            <th>{{ tup.0.num_total }}</th>
-                            <th>{{ tup.0.num_pending }}</th>
-                            <th>{{ tup.0.num_cancelled }}</th>
-                            <th>{{ tup.0.num_refunded }}</th>
-                            <th>{{ tup.0.num_paid }}</th>
+                            <th>{{ tup.0.num_total|togglesum }}</th>
+                            <th>{{ tup.0.num_pending|togglesum }}</th>
+                            <th>{{ tup.0.num_cancelled|togglesum }}</th>
+                            <th>{{ tup.0.num_refunded|togglesum }}</th>
+                            <th>{{ tup.0.num_paid|togglesum }}</th>
                         </tr>
                     {% endif %}
                     {% for item in tup.1 %}
                         <tr class="item {% if tup.0 %}categorized{% endif %}">
                             <td>{{ item.name }}</td>
-                            <td>{{ item.num_total }}</td>
-                            <td>{{ item.num_pending }}</td>
-                            <td>{{ item.num_cancelled }}</td>
-                            <td>{{ item.num_refunded }}</td>
-                            <td>{{ item.num_paid }}</td>
+                            <td>{{ item.num_total|togglesum }}</td>
+                            <td>{{ item.num_pending|togglesum }}</td>
+                            <td>{{ item.num_cancelled|togglesum }}</td>
+                            <td>{{ item.num_refunded|togglesum }}</td>
+                            <td>{{ item.num_paid|togglesum }}</td>
                         </tr>
                         {% if item.has_variations %}
                             {% for var in item.all_variations %}
                                 <tr class="variation {% if tup.0 %}categorized{% endif %}">
                                     <td>{{ var }}</td>
-                                    <td>{{ var.num_total }}</td>
-                                    <td>{{ var.num_pending }}</td>
-                                    <td>{{ var.num_cancelled }}</td>
-                                    <td>{{ var.num_refunded }}</td>
-                                    <td>{{ var.num_paid }}</td>
+                                    <td>{{ var.num_total|togglesum }}</td>
+                                    <td>{{ var.num_pending|togglesum }}</td>
+                                    <td>{{ var.num_cancelled|togglesum }}</td>
+                                    <td>{{ var.num_refunded|togglesum }}</td>
+                                    <td>{{ var.num_paid|togglesum }}</td>
                                 </tr>
                             {% endfor %}
                         {% endif %}
@@ -54,11 +61,11 @@
             <tfoot>
                 <tr class="total">
                     <th>{% trans "Total" %}</th>
-                    <th>{{ total.num_total }}</th>
-                    <th>{{ total.num_pending }}</th>
-                    <th>{{ total.num_cancelled }}</th>
-                    <th>{{ total.num_refunded }}</th>
-                    <th>{{ total.num_paid }}</th>
+                    <th>{{ total.num_total|togglesum }}</th>
+                    <th>{{ total.num_pending|togglesum }}</th>
+                    <th>{{ total.num_cancelled|togglesum }}</th>
+                    <th>{{ total.num_refunded|togglesum }}</th>
+                    <th>{{ total.num_paid|togglesum }}</th>
                 </tr>
             </tfoot>
         </table>
