Added pretix logo to the repository and the control navigation

--- a/src/pretix/control/static/pretixcontrol/less/main.less
+++ b/src/pretix/control/static/pretixcontrol/less/main.less
@@ -17,6 +17,11 @@ footer {
 nav.navbar {
     margin: 0;
 }
+.navbar-brand img {
+    height: 100%;
+    width: auto;
+    display: inline;
+}
 
 .navbar-header .navbar-events {
     color: white;
