--- a/src/static/pretixpresale/less/event.less
+++ b/src/static/pretixpresale/less/event.less
@@ -20,6 +20,11 @@
             color: @alert-warning-text;
         }
     }
+
+    .productpicture {
+        float: left;
+        margin-right: 10px;
+    }
 }
 .item-with-variations .product-row.headline, .product-row.simple {
     border-top: 2px solid @table-border-color;
