--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% block inside %}
-	<form action="" method="post" class="form-horizontal">
+	<form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
 		{% csrf_token %}
 		<fieldset>
 			<legend>{% trans "General information" %}</legend>
@@ -12,6 +12,7 @@
             {% bootstrap_field form.admission layout="horizontal" %}
 			{% bootstrap_field form.short_description layout="horizontal" %}
 			{% bootstrap_field form.long_description layout="horizontal" %}
+            {% bootstrap_field form.picture layout="horizontal" %}
 		</fieldset>
 		<fieldset>
 			<legend>{% trans "Price settings" %}</legend>
