Added lightbox.js for product images

--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -75,5 +75,8 @@
         {% endblocktrans %}
     {% endwith %}
 </footer>
+{% compress js %}
+    <script type="text/javascript" src="{% static "lightbox/js/lightbox.min.js" %}"></script>
+{% endcompress %}
 </body>
 </html>
