--- a/src/static/pretixpresale/less/event.less
+++ b/src/static/pretixpresale/less/event.less
@@ -24,6 +24,8 @@
     .productpicture {
         float: left;
         margin-right: 10px;
+        text-decoration: none;
+        display: block;
     }
 }
 .item-with-variations .product-row.headline, .product-row.simple {
