--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -62,9 +62,12 @@
                                 <div class="row-fluid product-row headline">
                                     <div class="col-md-8 col-xs-12">
                                         {% if item.picture %}
-                                            <img src="{{ item.picture|thumbnail_url:'productlist' }}"
-                                                    class="productpicture"
-                                                    alt="{{ item.name }}" />
+                                            <a href="{{ item.picture.url }}" class="productpicture"
+                                                    data-title="{{ item.name }}"
+                                                    data-lightbox="{{ item.identity }}">
+                                                <img src="{{ item.picture|thumbnail_url:'productlist' }}"
+                                                        alt="{{ item.name }}" />
+                                            </a>
                                         {% endif %}
                                         <a href="javascript:void(0);" data-toggle="variations">
                                             <strong>{{ item.name }}</strong>
@@ -118,6 +121,14 @@
                         {% else %}
                             <div class="row-fluid product-row simple">
                                 <div class="col-md-8 col-xs-12">
+                                    {% if item.picture %}
+                                        <a href="{{ item.picture.url }}" class="productpicture"
+                                                data-title="{{ item.name }}"
+                                                data-lightbox="{{ item.identity }}">
+                                            <img src="{{ item.picture|thumbnail_url:'productlist' }}"
+                                                    alt="{{ item.name }}" />
+                                        </a>
+                                    {% endif %}
                                     <strong>{{ item.name }}</strong>
                                     {% if item.short_description %}<p>{{ item.short_description }}</p>{% endif %}
                                 </div>
