--- a/src/static/pretixpresale/less/main.less
+++ b/src/static/pretixpresale/less/main.less
@@ -1,5 +1,6 @@
 @import "../../bootstrap/less/bootstrap.less";
 @import "../../fontawesome/less/font-awesome.less";
+@import "../../lightbox/css/lightbox.css";
 @fa-font-path: "../../fontawesome/fonts";
 
 @brand-primary: #8E44B3;
