--- a/src/pretix/control/templates/pretixcontrol/orders/overview.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/overview.html
@@ -6,8 +6,9 @@
     {% url "control:event.orders" organizer=request.event.organizer.slug event=request.event.slug as listurl %}
     <div class="pull-right">
         <div class="btn-group" role="group" id="sumtoggle">
-            <button type="button" data-target=".count" class="btn btn-default active">Show number</button>
-            <button type="button" data-target=".sum" class="btn btn-default">Show {{ request.event.currency }}</button>
+            <button type="button" data-target=".count" class="btn btn-default active">{% trans "Show number" %}</button>
+            <button type="button" data-target=".sum" class="btn btn-default">
+                {% blocktrans with currency=request.event.currency %}Show {{ currency }}{% endblocktrans %}</button>
         </div>
     </div>
 	<h1>{% trans "Order overview" %}</h1>
