Added pretix logo to control login page

--- a/src/pretix/control/templates/pretixcontrol/auth/login.html
+++ b/src/pretix/control/templates/pretixcontrol/auth/login.html
@@ -1,7 +1,9 @@
 {% extends "pretixcontrol/auth/base.html" %}
 {% load bootstrap3 %}
 {% load i18n %}
+{% load staticfiles %}
 {% block content %}
+    <img src="{% static "pretixbase/img/pretix-logo.svg" %}" class="logo" />
 	<form class="form-signin" action="" method="post">
 		{% bootstrap_form_errors form type='all' layout='inline' %}
 		{% csrf_token %}
