--- a/src/static/pretixcontrol/less/auth.less
+++ b/src/static/pretixcontrol/less/auth.less
@@ -10,12 +10,19 @@ footer {
 	font-size: 11px;
 }
 
+.logo {
+    width: 330px;
+    margin: auto;
+    display: block;
+    margin-top: 10%;
+    height: auto;
+    max-width: 100%;
+}
 .form-signin {
 	.well;
 
 	max-width: 330px;
 	margin: auto;
-	margin-top: 10%;
 	padding-bottom: 0;
 	
 	.control-label {
