Fixed #83 -- Added an informal German translation

--- a/src/static/pretixcontrol/less/flags.less
+++ b/src/static/pretixcontrol/less/flags.less
@@ -61,6 +61,7 @@ input[data-lang=cx], textarea[data-lang=cx] { background-image: url('../../preti
 input[data-lang=cy], textarea[data-lang=cy] { background-image: url('../../pretixbase/img/flags/cy.png'); }
 input[data-lang=cz], textarea[data-lang=cz] { background-image: url('../../pretixbase/img/flags/cz.png'); }
 input[data-lang=de], textarea[data-lang=de] { background-image: url('../../pretixbase/img/flags/de.png'); }
+input[data-lang=de-informal], textarea[data-lang=de-informal] { background-image: url('../../pretixbase/img/flags/de-informal.png'); }
 input[data-lang=dj], textarea[data-lang=dj] { background-image: url('../../pretixbase/img/flags/dj.png'); }
 input[data-lang=dk], textarea[data-lang=dk] { background-image: url('../../pretixbase/img/flags/dk.png'); }
 input[data-lang=dm], textarea[data-lang=dm] { background-image: url('../../pretixbase/img/flags/dm.png'); }
