--- a/src/pretix/control/templates/pretixcontrol/items/index.html
+++ b/src/pretix/control/templates/pretixcontrol/items/index.html
@@ -29,8 +29,12 @@
                 {% for c in cat_list %}
                     {% for i in c.list %}
                     <tr>
-                        <td><strong><a href="
-                        {% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=i.identity %}">{{ i.name }}</a></strong></td>
+                        <td><strong>
+                            {% if not i.active %}<strike>{% endif %}
+                            <a href="
+                        {% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=i.identity %}">{{ i.name }}</a>
+                            {% if not i.active %}</strike>{% endif %}
+                        </strong></td>
                         <td>{% if i.category %}{{ i.category.name }}{% endif %}</td>
                         <td>
                             <a href="{% url "control:event.items.up" organizer=request.event.organizer.slug event=request.event.slug item=i.identity %}" class="btn btn-default btn-sm {% if forloop.counter0 == 0 %}disabled{% endif %}"><i class="fa fa-arrow-up"></i></a>
