--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/control.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/control.html
@@ -5,7 +5,7 @@
         <p>{% blocktrans trimmed %}
             This order has been paid via Stripe.
         {% endblocktrans %}</p>
-    {% elif order.status == "p" %}
+    {% elif order.status == "r" %}
         <p>{% blocktrans trimmed %}
             This order has been planned to be paid via Stripe and has been marked as refunded.
         {% endblocktrans %}</p>
@@ -14,7 +14,7 @@
             This order has been planned to be paid via Stripe, but the payment has not yet been completed.
         {% endblocktrans %}</p>
     {% endif %}
-    {% if order.status != "p" %}
+    {% if order.status == "p" %}
         <dl class="dl-horizontal">
             <dt>{% trans "Charge ID" %}</dt>
             <dd>{{ payment_info.id }}</dd>
