Fixed layout issues in the restriction admin

--- a/src/pretix/control/templates/pretixcontrol/item/restrictions.html
+++ b/src/pretix/control/templates/pretixcontrol/item/restrictions.html
@@ -29,7 +29,7 @@
                                 <div id="collapse{{ f.prefix }}" class="panel-collapse collapse in">
                                     <div class="panel-body">
                                         <div class="form-horizontal">
-                                            {% bootstrap_form f layout="horizontal" field_class="col-md-10" %}
+                                            {% bootstrap_form f layout="horizontal" %}
                                         </div>
                                     </div>
                                 </div>
@@ -49,7 +49,7 @@
                                 <div id="collapse__prefix__" class="panel-collapse collapse in">
                                     <div class="panel-body">
                                         <div class="form-horizontal">
-                                            {% bootstrap_form set.formset.initialized_empty_form layout="horizontal" field_class="col-md-10" %}
+                                            {% bootstrap_form set.formset.initialized_empty_form layout="horizontal" %}
                                         </div>
                                     </div>
                                 </div>
